namespace observer.src.Interfaces;

public interface IObserver
{
    void Update(float temperature, float humidity);
}
